pre-wrap & posts scroll fix

--- a/react-app/src/style/less/main.less
+++ b/react-app/src/style/less/main.less
@@ -144,7 +144,7 @@ h4, h5, h6,
 
         .post-body {
           word-break: break-word;
-          white-space: pre;
+          white-space: pre-wrap;
         }
 
         .post-sub-title {
